[gd_scene load_steps=11 format=3 uid="uid://cmfsop4y5p85g"]

[ext_resource type="Script" uid="uid://ckw0x0o25bgag" path="res://script/scene_1_2.gd" id="1_qu6o8"]
[ext_resource type="PackedScene" uid="uid://bao1ug3shuin" path="res://scene/level_template.tscn" id="2_glxps"]
[ext_resource type="Texture2D" uid="uid://beiyoooxb0tm5" path="res://assets/tempassets/red-right arrow.png" id="3_nmnlr"]

[sub_resource type="Animation" id="Animation_fyec4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(919, 101)]
}

[sub_resource type="Animation" id="Animation_mo3cu"]
resource_name = "arrow_acc_checker"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(240, 101), Vector2(1687, 101)]
}

[sub_resource type="Animation" id="Animation_ww4u3"]
resource_name = "arrow_alt_text"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(919, 56)]
}

[sub_resource type="Animation" id="Animation_wdd10"]
resource_name = "arrow_button"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(919, 56)]
}

[sub_resource type="Animation" id="Animation_nmnlr"]
resource_name = "arrow_document"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(919, 101)]
}

[sub_resource type="Animation" id="Animation_8b7lu"]
resource_name = "arrow_outline"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(919, 101), Vector2(240, 101)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8b7lu"]
_data = {
&"RESET": SubResource("Animation_fyec4"),
&"arrow_acc_checker": SubResource("Animation_mo3cu"),
&"arrow_alt_text": SubResource("Animation_ww4u3"),
&"arrow_button": SubResource("Animation_wdd10"),
&"arrow_document": SubResource("Animation_nmnlr"),
&"arrow_outline": SubResource("Animation_8b7lu")
}

[node name="scene_1_2" type="Node2D"]
script = ExtResource("1_qu6o8")

[node name="level_template" parent="." instance=ExtResource("2_glxps")]

[node name="arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(919, 101)
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_nmnlr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8b7lu")
}

[connection signal="image_clicked" from="level_template" to="." method="_on_level_template_image_clicked"]
